--- a/_posts/2024-10/2024-10-18- vue.js 라우터.markdown
+++ b/_posts/2024-10/2024-10-18- vue.js 라우터.markdown
@@ -169,6 +169,50 @@ createApp(App).mount('#app')
 
 [Bootstrap page](https://getbootstrap.kr/)
 
+- 부트스트랩 + v-for 카드 만들기
+
+```javascript
+// 더미데이터 
+export const sculptureList = [{
+  number: 1,
+  name: 'Homenaje a la Neurocirugía',
+  artist: 'Marta Colvin Andrade',
+  description: 'Although Colvin is predominantly known for abstract themes that allude to pre-Hispanic symbols, this gigantic sculpture, an homage to neurosurgery, is one of her most recognizable public art pieces.',
+  url: 'https://i.imgur.com/Mx7dA2Y.jpg',
+  alt: 'A bronze statue of two crossed hands delicately holding a human brain in their fingertips.'  
+}, {
+  number: 2,
+  name: 'Floralis Genérica',
+  artist: 'Eduardo Catalano',
+  description: 'This enormous (75 ft. or 23m) silver flower is located in Buenos Aires. It is designed to move, closing its petals in the evening or when strong winds blow and opening them in the morning.',
+  url: 'https://i.imgur.com/ZF6s192m.jpg',
+  alt: 'A gigantic metallic flower sculpture with reflective mirror-like petals and strong stamens.'
+}, {
+  number: 3,
+  name: 'Eternal Presence',
+  artist: 'John Woodrow Wilson',
+  description: 'Wilson was known for his preoccupation with equality, social justice, as well as the essential and spiritual qualities of humankind. This massive (7ft. or 2,13m) bronze represents what he described as "a symbolic Black presence infused with a sense of universal humanity."',
+  url: 'https://i.imgur.com/aTtVpES.jpg',
+  alt: 'The sculpture depicting a human head seems ever-present and solemn. It radiates calm and serenity.'
+}]
+```
+
+```javascript
+// Study1.vue
+<div class="row justify-content-between">
+    <div v-for="(list, index) in sculptureList" :key="index" class="card" style="width: 18rem;">
+  <img :src=list.url class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{ list.name }}</h5>
+    <h6 class="card-subtitle mb-2 text-body-secondary">{{ list.artist }}</h6>
+    <p class="card-text">{{ list.description }}</p>
+  </div>
+</div>
+</div>
+
+```
+data.js 있는 데이터 객체 한 개씩 list에 넣고 출력
+
 ## 💡 tailwindcss
 
 
