--- a/_posts/2024-12/2024-12-30-SQL과 NoSQL.markdown
+++ b/_posts/2024-12/2024-12-30-SQL과 NoSQL.markdown
@@ -55,7 +55,7 @@ ex) <br>
 
 - 사용자가 원하는 데이터가 있을 수도 있고 없을 수도 있다.(추천시스템 로직이 수행될 때 사용자가 원하는 추천동영상이 없을 수도 있다** 사실 이 부분이 이 서비스에 최대 장점이자 단점이다..) 
 
-### 2) 데이터 삽입 속도와 읽기 속도 
+### 2) 데이터 규모(?)
 - 대용량 데이터라고 하긴 좀 .. 아쉬움이 있지만 실시간 데이터 처리를 위해 3시간 마다 API를 호출해 데이터를 가져온다. 이 때 DB에 insert되는 데이터량이 1000건정도 되었다. 
 - 가장 결정적이유: Insert와 Read가 주를 이루는 서비스다. 
 
