--- a/_posts/2024-12/2024-12-30-SQL과 NoSQL.markdown
+++ b/_posts/2024-12/2024-12-30-SQL과 NoSQL.markdown
@@ -62,7 +62,8 @@ ex) <br>
 이러한 이유로 인해서 MongoDB를 선택하였고 Json 형식으로 데이터가 저장되어 직관적으로 확인하기 편리했다. 
 
 #### ⭐ MongoDB를 사용할 때 주의해야 할 것!
- 기본 트랜잭션이 단일 문서에 국한되어 있고, 다중 문서 작업에서는 ACID 보장이 되기 어렵기 때문에 데이터가 정확히 처리 되었는지에 대한 비지니스로직을 작성해주어야 한다.
+ 1) 기본 트랜잭션이 단일 문서에 국한되어 있고, 다중 문서 작업에서는 ACID 보장이 되기 어렵기 때문에 데이터가 정확히 처리 되었는지에 대한 비지니스로직을 작성해주어야 한다.
+ 2) NoSQL경우 중복을 허용하기 때문에 이러한 중복된 데이터를 어플리케이션에서 관리해야함(이러한 이유 때문에 read속도가 빠른 이유가 될 수 있다)
 
 또한, 해당 프로젝트를 통해 Spring Data MongoDB를 사용해볼 수 있어서 그리고 프로젝트 class에서 RDB와는 다른 필드정의 등 좋은 경험이 되었던 것 같다. 
 
